# kopi_sentiment

./: .gitignore  404.html  LICENSE  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  about.html  about.txt  index.html  index.txt  main.py  pyproject.toml  railway.toml
.github/workflows/: daily-analysis.yml  deploy.yml  weekly-analysis.yml
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
about/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.about.__PAGE__.txt  __next.about.txt
data/: analytics.json  analytics_weekly.json  comments_labeled.csv  comments_labeled_v2.csv  comments_labeled_v3.csv  comments_raw.csv  validation_sample.csv
data/daily/: 2026-01-15.json  2026-01-16.json  2026-01-17.json  2026-01-18.json  2026-01-19.json  2026-01-20.json  2026-01-21.json  2026-01-22.json  2026-01-23.json  2026-01-24.json  2026-01-25.json  2026-01-26.json  2026-01-27.json  2026-01-29.json  2026-01-30.json  2026-01-31.json  2026-02-01.json  2026-02-02.json  2026-02-03.json  2026-02-04.json  2026-02-06.json  2026-02-07.json  2026-02-08.json  2026-02-09.json  2026-02-10.json  2026-02-11.json  2026-02-12.json  2026-02-14.json  2026-02-15.json  (+130 more)
railway/: Dockerfile  run.py
research/: ffga.md  notebook.ipynb
tests/: conftest.py  test_analyzer.py  test_pipeline.py  test_prompts.py  test_scraper.py
web/: next.config.ts  package-lock.json  package.json
(+491 files in other folders)
