[project]
name = "kopi-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.3",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pykernel>=0.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/kopi_sentiment']

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
